@@ -34,6 +34,7 @@ cl_symbols[] = {
 #else
 {SYS_ "UNBOUND", SI_ORDINARY, NULL, -1, OBJNULL},
 #endif
+{SYS_ "PROTECT-TAG", SI_ORDINARY, NULL, -1, OBJNULL},
 
 /* LISP PACKAGE */
 {"&ALLOW-OTHER-KEYS", CL_ORDINARY, NULL, -1, OBJNULL},
@@ -1041,7 +1042,6 @@ cl_symbols[] = {
 {SYS_ "*COMPILER-CONSTANTS*", SI_SPECIAL, NULL, -1, OBJNULL},
 {SYS_ "*GC-MESSAGE*", SI_SPECIAL, NULL, -1, Cnil},
 {SYS_ "*GC-VERBOSE*", SI_SPECIAL, NULL, -1, Cnil},
-{SYS_ "*IGNORE-ERRORS*", SI_SPECIAL, NULL, -1, Cnil},
 {SYS_ "*IGNORE-EOF-ON-TERMINAL-IO*", SI_SPECIAL, NULL, -1, Cnil},
 {SYS_ "*INDENT-FORMATTED-OUTPUT*", SI_SPECIAL, NULL, -1, Cnil},
 {SYS_ "*INIT-FUNCTION-PREFIX*", SI_SPECIAL, NULL, -1, Cnil},
