@@ -34,6 +34,7 @@ cl_symbols[] = {
 #else
 {SYS_ "UNBOUND",NULL},
 #endif
+{SYS_ "PROTECT-TAG",NULL},
 
 /* LISP PACKAGE */
 {"&ALLOW-OTHER-KEYS",NULL},
@@ -1041,7 +1042,6 @@ cl_symbols[] = {
 {SYS_ "*COMPILER-CONSTANTS*",NULL},
 {SYS_ "*GC-MESSAGE*",NULL},
 {SYS_ "*GC-VERBOSE*",NULL},
-{SYS_ "*IGNORE-ERRORS*",NULL},
 {SYS_ "*IGNORE-EOF-ON-TERMINAL-IO*",NULL},
 {SYS_ "*INDENT-FORMATTED-OUTPUT*",NULL},
 {SYS_ "*INIT-FUNCTION-PREFIX*",NULL},
